--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Collarchive</title>
 </head>
 <body>
-    <a href="/collection/new">Add a New Product</a>
+    <a href="/collection/new">Add New Item</a>
 </nav>
 <header><h1 id="indexTitle">COLLARCHIVE</h1></header>
 <ul id="index">
