Delete route created

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -21,7 +21,7 @@
 
     <a href="/collection/<%= index %>/edit">Edit This Product</a> 
     <br />
-    <form action="/store/<%= index %>?_method=DELETE" method="POST">
+    <form action="/collection/<%= index %>?_method=DELETE" method="POST">
         <input type="submit" value="DELETE" />
       </form>
 </body>
