--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Collarchive</title>
 </head>
 <body>
     <a href="/collection/new">Add New Item</a>
 </nav>
 <header><h1 id="indexTitle">COLLARCHIVE</h1></header>
+<p id="flavortext">The Collectors Archive</p>
 <ul id="index">
     <% collections.forEach(collection => { %>
     <li>
