--- a/style/style.css
+++ b/style/style.css
@@ -16,8 +16,45 @@ body {
     background-size: cover;
 }
 
-h1 {
+#indexTitle {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
     font-family: 'Arcade Interlaced';
     font-size: 100px;
     /* text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #ad00e6, 0 0 50px #9200e6; */
+}
+
+#flavorText {
+    display: flex;
+    justify-content: center;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    margin: 20;
+    padding: 20;
+}
+
+#index {
+    list-style-type: none;
+    padding: 15;
+    margin: 15;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
+}
+
+li {
+    padding: 10;
+    margin: 10;
+}
+
+.indexImg {
+    max-width: 500px;
+    max-height: 200px;
 }
