swapped all text links for buttons, updated styling

--- a/style/style.css
+++ b/style/style.css
@@ -45,7 +45,7 @@ nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     justify-items: center;
 }
 
