--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,7 +10,13 @@
 <body>
     <header><h1 id="showTitle"><%=collection.name %></h1></header>
     <nav>
-        <a href="/collection">Home</a>
+        <!-- <a href="/collection">Home</a> -->
+        <form action="/collection">
+            <input type="submit" value="HOME" />
+          </form>
+        <form action="/collection/<%= index %>/edit">
+            <input type="submit" value="EDIT" />
+          </form>
     </nav>
     <img src="<%= collection.img %>" title="<%= collection.name %>">
     <br />
@@ -19,8 +25,6 @@
     <p><%= collection.description %></p>
     <p><%= collection.qty %> Owned</p>
 
-
-    <a href="/collection/<%= index %>/edit">Edit This Product</a> 
     <br />
     <form action="/collection/<%= index %>?_method=DELETE" method="POST">
         <input type="submit" value="DELETE" />
