--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,16 +18,19 @@
             <input type="submit" value="EDIT" />
           </form>
     </nav>
-    <img src="<%= collection.img %>" title="<%= collection.name %>">
-    <br />
-    <br />
-    <h2><%= collection.platform %></h2>
-    <p><%= collection.description %></p>
-    <p><%= collection.qty %> Owned</p>
+    <div id="showMain">
+        <img id="showImg" src="<%= collection.img %>" title="<%= collection.name %>">
+    </div>
+        <br />
+        <br />
+        <h2 id="platform"><%= collection.platform %></h2>
+        <br />
+        <p id="info"><%= collection.description %></p>
+        <p id="qty"><%= collection.qty %> Owned</p>
 
-    <br />
-    <form action="/collection/<%= index %>?_method=DELETE" method="POST">
-        <input type="submit" value="DELETE" />
-      </form>
+        <br />
+        <form id="delete" action="/collection/<%= index %>?_method=DELETE" method="POST">
+            <input type="submit" value="DELETE" />
+        </form>
 </body>
 </html>
