--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,19 +18,19 @@
             <input type="submit" value="EDIT" />
           </form>
     </nav>
+    <br />
     <div id="showMain">
         <img id="showImg" src="<%= collection.img %>" title="<%= collection.name %>">
     </div>
-        <br />
-        <br />
         <h2 id="platform"><%= collection.platform %></h2>
-        <br />
+    <div id="infoDiv">
         <p id="info"><%= collection.description %></p>
+    </div>
         <p id="qty"><%= collection.qty %> Owned</p>
 
         <br />
         <form id="delete" action="/collection/<%= index %>?_method=DELETE" method="POST">
-            <input type="submit" value="DELETE" />
+            <input id="deleteBtn" type="submit" value="DELETE" />
         </form>
 </body>
 </html>
