--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <p id="flavorText">The Collectors Archive</p>
 <nav>
     <form action="/collection/new">
-        <input type="submit" value="ADD NEW" />
+        <input class="navi" type="submit" value="ADD NEW" />
       </form>
 </nav>
 <ul id="index">
