--- a/style/style.css
+++ b/style/style.css
@@ -21,21 +21,34 @@ body {
     justify-content: center;
     margin: 0;
     padding: 0;
+    padding-top: 30px;
     font-family: 'Arcade Interlaced';
-    font-size: 100px;
-    /* text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #ad00e6, 0 0 50px #9200e6; */
+    font-size: 7vw;
+    font-weight: lighter;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #ad00e6, 0 0 50px #9200e6;
 }
 
 #flavorText {
+    font-family: 'Arcade Interlaced';
     display: flex;
     justify-content: center;
+    font-size: 1.5vw;
+    font-weight: lighter;
 }
 
 nav {
     display: flex;
     justify-content: center;
-    margin: 20;
-    padding: 20;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    border-top: 2px solid aquamarine;
+    border-bottom: 2px solid aquamarine;
+    margin-bottom: 30px;
+}
+
+.navBar {
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 #index {
@@ -47,7 +60,7 @@ nav {
     flex-wrap: wrap;
     justify-content: space-around;
     justify-items: center;
-    max-width: 1920px;
+    max-width: 100%;
 }
 
 .indexImg {
@@ -58,12 +71,16 @@ nav {
 #showTitle {
     display: flex;
     justify-content: center;
-    font-size: 60px;
+    text-align: center;
+    font-size: 3.3vw;
+    font-family: 'Arcade Interlaced';
+    font-weight: lighter;
+    max-width: 100%;
 }
 
 #showImg {
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 30vw;
+    max-height: 30vw;
 }
 
 #showMain {
@@ -87,7 +104,7 @@ nav {
     align-items: center;
     align-content: center;
     text-align: center;
-    width: 500px;
+    width: 50vw;
 }
 
 #qty {
@@ -103,3 +120,111 @@ nav {
     color: white;
     background-color: red;
 }
+
+#deleteBtn:hover {
+    cursor: pointer;
+    background-color: darkred;
+    box-shadow: 2px 2px;
+    transition: 0.5s ease-in-out;
+}
+
+.navi {
+    background-image: radial-gradient(100% 100% at 100% 0, pink 0, hotpink 100%);
+}
+
+.navi:hover {
+    cursor: pointer;
+    background: orangered;
+    box-shadow: 2px 2px;
+    transition: 0.5s ease-in-out;
+}
+
+input[type="submit"] {
+    font-weight: bolder;
+    border: 0px;
+    transition: 0.5s ease-in-out;
+    border-radius: 5px;
+    align-items: center;
+    appearance: none;
+    display: inline-flex;
+    height: 35px;
+    justify-content: center;
+    line-height: 1;
+    padding-left: 18px;
+    padding-right: 18px;
+    position: relative;
+    font-size: 16px;
+}
+
+#formTitle {
+    display: flex;
+    justify-content: center;
+    font-size: 60px;
+}
+
+.formContainer {
+    width: 40vw;
+    height: 40vw;
+    margin: 0 auto;
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #ddd,
+                -1px -1px 10px #ddd,
+                1px -1px 10px #ddd,
+                -1px 1px 10px #ddd;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: auto;
+    background: gray;
+  }
+
+label {
+    font-weight: bolder;
+    display: block;
+  }
+
+input[type="text"] {
+    width: 300%;
+    margin: 10px 0;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px aquamarine;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+input[type="number"] {
+    width: 300%;
+    margin: 10px 0;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px aquamarine;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+textarea {
+    width: 300%;
+    margin: 10px 0;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px aquamarine;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+input:focus {
+    outline: 0;
+    border: 1px solid hotpink;
+  }
+
+textarea:focus {
+    outline: 0;
+    border: 1px solid hotpink;
+  }
