--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,14 +8,31 @@
     <title>Collarchive</title>
 </head>
 <body>
-    <header><h1>New Item</h1></header>
+    <header><h1 id="formTitle">New Item</h1></header>
+    <nav>
+        <form action="/collection">
+            <input class="navi" type="submit" value="HOME" />
+          </form>
+    </nav>
+    <div class="formContainer">
     <form action="/collection" method="POST">
-        <input type="text" name="name" placeholder="name" />
-        <input type="text" name="description" placeholder="description" /><br />
+        <label for="name">TITLE:</label>
+        <input type="text" name="name" placeholder="title" />
+        <br />
+        <label for="img">IMAGE LINK:</label>
         <input type="text" name="img" placeholder="link to image" />
-        <input type="text" name="platform" placeholder="platform" /><br />
+        <br />
+        <label for="platform">PLATFORM:</label>
+        <input type="text" name="platform" placeholder="platform" />
+        <br />
+        <label for="qty">QUANTITY OWNED:</label>
         <input type="number" name="qty" placeholder="quantity"/>
-        <input type="submit" name="" value="Add to Collection" />
+        <br />
+        <label for="description">DESCRIPTION:</label>
+        <textarea name="description" id="description" cols="30" rows="10" placeholder="description of item"></textarea>
+        <br />
+        <input class="navi" type="submit" value="Add to Collection" />
     </form>
+    </div>
 </body>
 </html>
