--- a/views/new.ejs
+++ b/views/new.ejs
@@ -17,19 +17,19 @@
     <div class="formContainer">
     <form action="/collection" method="POST">
         <label for="name">TITLE:</label>
-        <input type="text" name="name" placeholder="title" />
+        <input type="text" name="name" placeholder="Game Title" />
         <br />
         <label for="img">IMAGE LINK:</label>
-        <input type="text" name="img" placeholder="link to image" />
+        <input type="text" name="img" placeholder="Link to Boxart Image" />
         <br />
         <label for="platform">PLATFORM:</label>
-        <input type="text" name="platform" placeholder="platform" />
+        <input type="text" name="platform" placeholder="Platform" />
         <br />
         <label for="qty">QUANTITY OWNED:</label>
-        <input type="number" name="qty" placeholder="quantity"/>
+        <input type="number" name="qty" placeholder="Enter a Number"/>
         <br />
         <label for="description">DESCRIPTION:</label>
-        <textarea name="description" id="description" cols="30" rows="10" placeholder="description of item"></textarea>
+        <textarea name="description" id="description" cols="30" rows="10" placeholder="Description of Game"></textarea>
         <br />
         <input class="navi" type="submit" value="Add to Collection" />
     </form>
