--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -20,19 +20,19 @@
     <div class="formContainer">
     <form action="/collection/<%= index %>?_method=PUT" method="POST">
         <label for="name">TITLE:</label>
-        <input type="text" name="name" placeholder="title" value="<%= collection.name %>" />
+        <input type="text" name="name" placeholder="Game Title" value="<%= collection.name %>" />
         <br />
         <label for="img">IMAGE LINK:</label>
-        <input type="text" name="img" placeholder="link to image" value="<%= collection.img %>"/>
+        <input type="text" name="img" placeholder="Link to Boxart Image" value="<%= collection.img %>"/>
         <br />
         <label for="platform">PLATFORM:</label>
-        <input type="text" name="platform" placeholder="platform" value="<%= collection.platform %>"/>
+        <input type="text" name="platform" placeholder="Platform" value="<%= collection.platform %>"/>
         <br />
         <label for="qty">QUANTITY OWNED:</label>
-        <input type="number" name="qty" placeholder="quantity" value="<%= collection.qty %>"/>
+        <input type="number" name="qty" placeholder="Enter a Number" value="<%= collection.qty %>"/>
         <br />
         <label for="description">DESCRIPTION:</label>
-        <textarea name="description" id="description" cols="30" rows="10"><%= collection.description %></textarea>
+        <textarea name="description" id="description" cols="30" rows="10" placeholder="Description of Game"><%= collection.description %></textarea>
         <br />
         <input class="navi" type="submit" value="Submit Changes" />
     </form>
