--- a/views/new.ejs
+++ b/views/new.ejs
@@ -17,13 +17,13 @@
     <div class="formContainer">
     <form action="/collection" method="POST">
         <label for="name">TITLE:</label>
-        <input type="text" name="name" placeholder="Game Title" />
+        <input type="text" name="name" placeholder="Game Title" required />
         <br />
         <label for="img">IMAGE LINK:</label>
         <input type="text" name="img" placeholder="Link to Boxart Image" />
         <br />
         <label for="platform">PLATFORM:</label>
-        <input type="text" name="platform" placeholder="Platform" />
+        <input type="text" name="platform" placeholder="Platform" required/>
         <br />
         <label for="qty">QUANTITY OWNED:</label>
         <input type="number" name="qty" placeholder="Enter a Number"/>
