--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Collarchive">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/citybg2.png">
+    <meta property="og:url" content="https://collarchive.herokuapp.com/">
+    <meta property="og:description" content="Collarchive allows users to contribute to an online archive of collectible video games!">
     <link rel="stylesheet" href="/style.css">
     <title>Collarchive</title>
 </head>
